scroll fix on mobile devices

--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -71,9 +71,10 @@
 }
 .chat-display{
     width: auto;
+    height: 79.5vh;
     overflow: scroll;
     overflow-x: hidden;
-    flex-grow: 1;
+    /* flex-grow: 1; */
     padding: 20px;
     display: flex;
     flex-direction: column;
